src/test/ui/array-slice-vec/infer_array_len.stderr
error[E0282]: type annotations needed
  --> $DIR/infer_array_len.rs:19:9
   |
LL |     let [_, _] = a.into();
   |         ^^^^^^
   |
   = note: type must be known at this point
help: consider giving this pattern a type
   |
LL |     let [_, _]: _ = a.into();
   |               +++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
